--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "typescript": "^4.8.3"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "express": "^4.18.1",
     "pg": "^8.8.0"
