--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "@types/react": "^18.0.18",
     "@types/react-dom": "^18.0.6",
     "bootstrap": "^5.2.1",
+    "jsonwebtoken": "^8.5.1",
     "quagga": "^0.12.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
